# steering-for-personalization

./: .gitignore  README.md  classifier_pro.py  create_prompt_exp.py  pyproject.toml
data/scripts/: new_dataset.py
src/: goodfire_api_helper.py  local_steer_helper.py  metric.py  probing.py  test_prompt_template.py  train_persona.py  utils.py  wrappers.py
