[project]
name = "steer-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.5.2",
    "bitsandbytes>=0.45.4",
    "datasets>=2.21.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.3",
    "fire>=0.7.0",
    "flash-attn>=2.7.4.post1",
    "goodfire>=0.3.5",
    "ipykernel>=6.29.5",
    "jiwer>=3.1.0",
    "ml-dtypes>=0.4.1",
    "nnsight>=0.4.5",
    "rich>=13.9.4",
    "sacrebleu>=2.5.1",
    "sae-lens>=5.8.0",
    "torch>=2.6.0",
    "transformers>=4.50.1",
    "unbabel-comet>=2.2.6",
]
